--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -98,6 +98,7 @@
                     <dd><a href="#cpmSummary" id="navCPMSummary">Summary</a></dd>
                     <dd><a href="#cpmReports" id="navCPMReports">Report</a></dd>
                     <dd><a href="#cpmDrops" id="navCPMDrops">Drop</a></dd>
+                    <dd><a href="#cpmCreatives" id="navCPMCreatives">Creatives</a></dd>
                 </dl>
                 @*<!--+-----------------------+
                       | CPM HTabs Content     |
@@ -107,6 +108,7 @@
                     <li id="cpmSummaryTab">Please select an offer</li>
                     <li id="cpmReportsTab">Please select an offer and a report</li>
                     <li id="cpmDropsTab">Please select an offer and a drop</li>
+                    <li id="cpmCreativesTab">Please select an offer</li>
                 </ul>
             </div>
         </li>
