--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CPMReports/PreviewEmail.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CPMReports/PreviewEmail.cshtml
@@ -10,7 +10,7 @@
         <tr>
             <td width="13" rowspan="2" align="left" valign="top">&nbsp;</td>
             <td width="195" rowspan="2" align="left" valign="top">
-                <img src="@(PortalUrl)Images/logo1.png" alt="" width="152" height="86" /></td>
+                <img src="@(PortalUrl)/Images/logo1.png" alt="" width="152" height="86" /></td>
             <td height="24" colspan="2" align="left" valign="top">&nbsp;</td>
         </tr>
         <tr>
@@ -19,7 +19,11 @@
                 <tr>
                     <td width="347" align="right" valign="middle"><strong style="font-family: Arial black, Helvetica, sans-serif; text-align: center; font-size: 28px;">CPM REVIEW&nbsp;</strong></td>
                     <td width="140" align="left" valign="middle"><strong style="font-family: Arial black, Helvetica, sans-serif; text-align: center; font-size: 28px;">
-                        <img src="images/pinchme.gif" alt="Pinch Me" width="139" height="46" /></strong></td>
+                        @if (Model.Offer.Logo != null)
+                        {
+                            <img src="@PortalUrl@Url.Action("Logo", "Offers", new { id = Model.Offer.OfferId })" />
+                        }
+                        </strong></td>
                 </tr>
                 </table>
             </td>
@@ -28,7 +32,7 @@
         <tr>
             <td align="left" valign="top">&nbsp;</td>
             <td colspan="2" align="left" valign="top" style="font-family: Arial, Gadget, sans-serif, Helvetica, sans-serif; font-size: 26px; color: #3b98f1;"><b>Summary</b><br />
-                <img src="@(PortalUrl)Images/spacer.gif" width="18" height="18" /><br />
+                <img src="@(PortalUrl)/Images/spacer.gif" width="18" height="18" /><br />
             </td>
             <td align="right" valign="top">&nbsp;</td>
         </tr>
@@ -42,7 +46,7 @@
         <tr>
             <td align="left" valign="top">&nbsp;</td>
             <td colspan="2" align="left" valign="top" style="font-family: Arial, Gadget, sans-serif, Helvetica, sans-serif; font-size: 26px; color: #3b98f1;"><b>Performance Stats</b><br />
-                <img src="@(PortalUrl)Images/spacer.gif" width="18" height="18" /><br />
+                <img src="@(PortalUrl)/Images/spacer.gif" width="18" height="18" /><br />
             </td>
             <td align="right" valign="top">&nbsp;</td>
         </tr>
@@ -65,18 +69,32 @@
             @foreach(var drop in Model.CampaignDropsOrdered)
             {
                 bgcolor = (bgcolor == "ffffff") ? "e5e5e5" : "ffffff";
-            <tr>
-                <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666">@drop.AffiliateId</td>
-                <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666">@drop.Date</td>
-                <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666">@drop.Volume</td>
-                <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666">@drop.Opens
-                    <br />Open Rate: @drop.OpenRate</td>
-                <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666">@drop.TotalClicks
-                    <br />CTR: @drop.ClickThroughRate</td>
-                <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #3399ff; font-weight: bold;"><b>@drop.TotalLeads
-                    <br />eCPL: @drop.CostPerLead</b></td>
-                <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666">@drop.Cost</td>
-            </tr>
+                <tr>
+                    <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666">@drop.AffiliateId</td>
+                    <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666">@drop.Date</td>
+                    <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666">@drop.Volume</td>
+                    <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666">@drop.Opens
+                        <br />Open Rate: @drop.OpenRate</td>
+                    <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666">@drop.TotalClicks
+                        <br />CTR: @drop.ClickThroughRate</td>
+                    <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #3399ff; font-weight: bold;"><b>@drop.TotalLeads
+                        <br />eCPL: @drop.CostPerLead</b></td>
+                    <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666">@drop.Cost</td>
+                </tr>
+                if (drop.CreativeStats.Count() > 1)
+                {
+                    foreach (var creativeStat in drop.CreativeStats)
+                    {
+                    <tr>
+                        <td colspan="2" height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666">&nbsp;</td>
+                        <td colspan="2" height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666">Creative: @creativeStat.CreativeName</td>
+                        <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666">@creativeStat.Clicks
+                            <br />CTR: @creativeStat.ClickThroughRate</td>
+                        <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #3399ff; font-weight: bold;"><b>@creativeStat.Leads</td>
+                        <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666">&nbsp;</td>
+                    </tr>
+                    }
+                }
             }
 
             <tr>
@@ -113,7 +131,7 @@
                 </tr>
                 <tr>
                     <td height="1px" colspan="3" align="left" valign="top" bgcolor="#cccccc">
-                        <img src="@(PortalUrl)Images/line.gif" width="5" height="1" /></td>
+                        <img src="@(PortalUrl)/Images/line.gif" width="5" height="1" /></td>
                 </tr>
                 <tr>
                     <td>&nbsp;</td>
@@ -122,7 +140,7 @@
                 </tr>
                 <tr>
                     <td height="1px" colspan="3" align="left" valign="top" bgcolor="#cccccc">
-                        <img src="@(PortalUrl)Images/line.gif" width="5" height="1" /></td>
+                        <img src="@(PortalUrl)/Images/line.gif" width="5" height="1" /></td>
                 </tr>
                 <tr>
                     <td>&nbsp;</td>
@@ -131,7 +149,7 @@
                 </tr>
                 <tr>
                     <td height="1px" colspan="3" align="left" valign="top" bgcolor="#cccccc">
-                        <img src="@(PortalUrl)Images/line.gif" width="5" height="1" /></td>
+                        <img src="@(PortalUrl)/Images/line.gif" width="5" height="1" /></td>
                 </tr>
                 <tr>
                     <td>&nbsp;</td>
@@ -152,7 +170,7 @@
         <tr>
             <td align="left" valign="top">&nbsp;</td>
             <td colspan="2" align="left" valign="top" style="font-family: Arial, Gadget, sans-serif, Helvetica, sans-serif; font-size: 26px; color: #3b98f1;"><b>Creative Summary</b><br />
-                <img src="@(PortalUrl)Images/spacer.gif" width="18" height="18" /><br />
+                <img src="@(PortalUrl)/Images/spacer.gif" width="18" height="18" /><br />
             </td>
             <td align="right" valign="top">&nbsp;</td>
         </tr>
@@ -175,47 +193,50 @@
             {
                 dropNum++;
                 bgcolor = (bgcolor == "ffffff") ? "e5e5e5" : "ffffff";
+                var creativeStat0 = drop.CreativeStats.First();
             <tr>
                 <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666">@dropNum</td>
                 <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666">@drop.Date</td>
                 <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666">x@x.com</td>
                 <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666">@drop.Subject</td>
                 <td width="118" height="0" align="left" valign="top" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #3399ff">
-                    <img src="images/c1.gif" width="117" height="53" border="0" align="top" /></td>
+                    @if (creativeStat0.Thumbnail != null)
+                    {
+                        <img src="@PortalUrl@Url.Action("Thumbnail", "Creatives", new { id = creativeStat0.CreativeId })" />
+                    }
+                </td>
             </tr>
+                if (drop.CreativeStats.Count() > 1)
+                {
+                    foreach (var creativeStat in drop.CreativeStats.Skip(1))
+                    {
+                        <tr>
+                            <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666"></td>
+                            <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666"></td>
+                            <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666"></td>
+                            <td height="45" align="left" valign="middle" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #666666"></td>
+                            <td width="118" height="0" align="left" valign="top" bgcolor="#@bgcolor" style="color: #000; border-right: 1px solid #c7c3c7; font-family: Arial, Helvetica, sans-serif; font-size: 11px; text-align: center; color: #3399ff">
+                                @if (creativeStat.Thumbnail != null)
+                                {
+                                    <img src="@PortalUrl@Url.Action("Thumbnail", "Creatives", new { id = creativeStat.CreativeId })" />
+                                }
+                            </td>
+                        </tr>
+                    }
+                }
             }
             </table>
 
             </td>
         </tr>
-        <tr>
-            <td height="23" colspan="4" align="left" valign="top">&nbsp;</td>
-        </tr>
-        <tr>
-            <td align="left" valign="top">&nbsp;</td>
-            <td colspan="2" align="left" valign="top" style="font-family: Arial, Gadget, sans-serif, Helvetica, sans-serif; font-size: 26px; color: #3b98f1;"><b>Optimization</b><br />
-                <img src="@(PortalUrl)Images/spacer.gif" width="18" height="18" /><br />
-            </td>
-            <td align="right" valign="top">&nbsp;</td>
-        </tr>
-        <tr>
-            <td align="left" valign="top">&nbsp;</td>
-            <td colspan="2" align="left" valign="top" style="font-family: Arial, Helvetica, sans-serif; font-size: 14px;">
-                <img src="@(PortalUrl)Images/bullet_triangle.gif" width="17" height="9" />Test
-                <br />
-                <img src="@(PortalUrl)Images/bullet_triangle.gif" alt="" width="17" height="9" />Landing page - Testing different Landing Pages to see which result in the best CTR and eCPL<br />
-                <a href="https://www.pinchme.com/signup" style="color: #37A5F2;" target="_blank">https://www.pinchme.com/signup</a> vs <a href="https://www.pinchme.com/" style="color: #37A5F2;" target="_blank">https://www.pinchme.com/</a><br>
-                <br />
-            </td>
-            <td align="right" valign="top">&nbsp;</td>
-        </tr>
+
         <tr>
             <td height="23" colspan="4" align="left" valign="top">&nbsp;</td>
         </tr>
         <tr>
             <td align="left" valign="top">&nbsp;</td>
             <td colspan="2" align="left" valign="top" style="font-family: Arial, Gadget, sans-serif, Helvetica, sans-serif; font-size: 26px; color: #3b98f1;"><b>Next Steps</b><br />
-                <img src="@(PortalUrl)Images/spacer.gif" width="18" height="18" /><br />
+                <img src="@(PortalUrl)/Images/spacer.gif" width="18" height="18" /><br />
             </td>
             <td align="right" valign="top">&nbsp;</td>
         </tr>
