--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CPMReports/PreviewEmail.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/CPMReports/PreviewEmail.cshtml
@@ -11,7 +11,7 @@
         <tr>
             <td width="13" rowspan="2" align="left" valign="top">&nbsp;</td>
             <td width="195" rowspan="2" align="left" valign="top">
-                <img src="@(PortalUrl)/Images/logo1.png" alt="" width="152" height="86" /></td>
+                <img src="@(PortalUrl)/Images/logo1w.png" alt="" width="195" height="70" /></td>
             <td height="13" colspan="2" align="left" valign="top"></td>
         </tr>
         <tr>
@@ -19,6 +19,10 @@
                 <img src="@(PortalUrl)@Url.Action("Logo", "Offers", new { id = Model.Offer.OfferId })" />
             </td>
             <td width="13" align="right" valign="top">&nbsp;</td>
+        </tr>
+
+        <tr>
+            <td height="23" colspan="4" align="left" valign="top">&nbsp;</td>
         </tr>
 
         <tr>@* Summary Text *@
